# ethena-minting-client

./: .env.example  .gitignore  .npmrc  README.md  SECURITY.md  defi_mint_abi.json  defi_usde_abi.json  gatekeeper_script.py  mint_script.py  mint_script_v2.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  renovate.json  requirements.txt  tsconfig.json
.github/: CODEOWNERS  renovate.json
api/: .gitignore  README.md  eslint.config.mjs  next.config.ts  next.openapi.json  package.json  pnpm-lock.yaml  tsconfig.json
api/app/: layout.tsx
api/app/api/openapi/: route.ts
api/app/api/order/: route.ts
api/app/api/rfq/: route.ts
api/app/docs/: route.ts
api/schemas/: common.ts  index.ts  order.ts  rfq.ts
py/: README.md  mint_abi.json  mint_script.py  multisig_auto_mint_bot.py  multisig_mint_bot_multitoken.py  usde_abi.json
ts/: README.md  constants.ts  mint_script.ts  mint_utils.ts  minting_abi.ts  types.ts
ui/: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/components/: Box.tsx  Button.tsx  Header.tsx  Input.tsx  Loading.tsx  Select.tsx  Toast.tsx
ui/app/components/features/mint/: Mint.tsx  NotConnected.tsx  NotWhitelisted.tsx
ui/app/constants/: app-config.ts  minting-abi.ts  mintings-abi.ts  usdt-abi.ts
ui/app/hooks/: useAllowance.ts  useApprove.ts  useMint.ts  useUsdtApprove.ts  useWhitelistCheck.ts
ui/app/providers/: WalletProvider.tsx
ui/app/utils/: formatAddress.ts  getParsedAmount.ts  parseScientificToBigInt.ts
